<resources>
    <string name="app_name">StevenUniverseCharacters</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="g">G</string>
    <string name="j">J</string>
    <string name="l">L</string>
    <string name="p">P</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="w">W</string>
</resources>
