<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a"
                android:id="@+id/a"
                android:onClick="chooseLetter"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/b"
                android:id="@+id/b"
                android:onClick="chooseLetter"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/c"
                android:id="@+id/c"
                android:onClick="chooseLetter"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/g"
                android:id="@+id/g"
                android:onClick="chooseLetter"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/j"
                android:id="@+id/j"
                android:onClick="chooseLetter"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/l"
                android:id="@+id/l"
                android:onClick="chooseLetter"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/p"
                android:id="@+id/p"
                android:onClick="chooseLetter"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/r"
                android:id="@+id/r"
                android:onClick="chooseLetter"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/s"
                android:id="@+id/s"
                android:onClick="chooseLetter"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/w"
                android:id="@+id/w"
                android:onClick="chooseLetter"/>
        </LinearLayout>
    </ScrollView>